i am very good boy

--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-ami ag noton class korlam
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+
+    
+</head>
+<body>
+    <div>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit officia ullam ea nesciunt molestiae debitis ipsam alias sunt vero doloremque dolorum distinctio nulla quo provident, asperiores corporis totam libero esse!</p>
+    </div>
+    <ul>
+        <li>dhaka</li>
+        <li>comilla</li>
+        <li>borishal</li>
+    </ul>
+    <ol>
+        <li>dhaka</li>
+        <li>comilla</li>
+        <li>borishal</li>
+    
+    </ol>
+    <h1>heading one</h1>
+    <h1>heading one</h1>
+    <h1>heading one</h1>
+    <p><a href="about.html">visit our about page</a></p>
+</body>
+</html>
